<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="save_expense">Save Expense</string>
	<string name="get_total_expenses">Get Total Expenses</string>
	<string name="enter_amount">Enter amount</string>
	<string name="enter_expense_name">Enter Expense Name</string>
	<string name="delete_current_expense_list">Delete Current Expense List</string>
<<<<<<< HEAD
	<string name="personal_expense">Personal Expense</string>
	<string name="common_expense">Common Expense</string>
	<string name="get_common_expenses">Get Common Expenses</string>
=======
>>>>>>> parent of 794b247... Revert "Expense Tracker Commit"
</resources>
