<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    android:background="@drawable/background1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
<<<<<<< HEAD
 
    <Button
        android:id="@+id/saveexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deleteexpenselist"
        android:layout_centerHorizontal="true"
        android:onClick="saveExpenseToFile"
        android:text="@string/save_expense"
=======

    <Button
        android:id="@+id/getexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deleteexpenselist"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/deleteexpenselist"
        android:layout_marginRight="45dp"
        android:onClick="getTotalExpensesFromFile"
        android:text="@string/get_total_expenses"
>>>>>>> parent of 794b247... Revert "Expense Tracker Commit"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/expensename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_above="@+id/expensevalue"
        android:layout_alignLeft="@+id/expensevalue"
        android:ems="10"
        android:hint="@string/enter_expense_name"
        android:textStyle="bold|italic" />
        <requestFocus />
        

=======
        android:layout_alignLeft="@+id/expensevalue"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/enter_expense_name" 
        android:textStyle="bold|italic"/>
		<requestFocus />
>>>>>>> parent of 794b247... Revert "Expense Tracker Commit"
    <EditText
        android:id="@+id/expensevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_above="@+id/saveexpense"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/PersonalExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/personal_expense" 
        android:textStyle="bold|italic"
        android:onClick="deselectCommonCheckBox"/>

    <CheckBox
        android:id="@+id/CommonExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/saveexpense"
        android:text="@string/common_expense" 
        android:textStyle="bold|italic" 
        android:onClick="deselectPersonalCheckBox"/>
=======
        android:layout_below="@+id/expensename"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:textStyle="bold|italic" >
    </EditText>
>>>>>>> parent of 794b247... Revert "Expense Tracker Commit"

    <Button
        android:id="@+id/deleteexpenselist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:layout_marginLeft="15dp"
        android:onClick="deleteCurrentExpenseList"
        android:text="@string/delete_current_expense_list"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/getexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deleteexpenselist"
        android:layout_alignBottom="@+id/deleteexpenselist"
        android:layout_alignRight="@+id/CommonExpense"
        android:onClick="getTotalExpensesFromFile"
        android:text="@string/get_total_expenses"
=======
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/saveexpense"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:onClick="deleteCurrentExpenseList"
        android:text="@string/delete_current_expense_list" 
        android:textStyle="bold|italic"/>

    <Button
        android:id="@+id/saveexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expensevalue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="saveExpenseToFile"
        android:text="@string/save_expense"
>>>>>>> parent of 794b247... Revert "Expense Tracker Commit"
        android:textStyle="bold|italic" />

</RelativeLayout>